upravy pre guidevis

--- a/template/elements/sidebar.twig
+++ b/template/elements/sidebar.twig
@@ -48,12 +48,13 @@
     <div class="px-6 pt-4 pb-4">
       <!-- Logo -->
       <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="#" aria-label="Preline">
-        CeremonyCRM user guide
-      </a>
+        CeremonyCRM
+      </a><br/>
+      <small>Developer's guide</small>
       <!-- End Logo -->
     </div>
 
-    <div class="hidden md:block">
+    {# <div class="hidden md:block">
       <!-- Search Input -->
       <div class="relative">
         <div class="absolute inset-y-0 start-0 flex items-center pointer-events-none z-20 ps-3.5">
@@ -87,7 +88,7 @@
         </div>
       </div>
       <!-- End Search Input -->
-    </div>
+    </div> #}
 
     <!-- Sidebar content -->
     <div class="h-full overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
