--- a/template/elements/sidebar.twig
+++ b/template/elements/sidebar.twig
@@ -1,41 +1,50 @@
 {% macro renderSidebar(items, bookConfig, env, breadcrumbs, itemIdPrefix, level) %}
-  {% if level <= 4 %}
-    {% set itemCounter = 0 %}
-    {% for item in items %}
-      <li id="{{ itemIdPrefix }}_{{ itemCounter }}" class="level-{{ level }}">
-        {% if item.children is iterable %}
-          <a href="{{ env.guideRootUrl }}/{{ item.page ?? '' }}"
-            class="{% if level == 0 %} btn {% else %} btn btn-small {% endif %} {% if breadcrumbs|last == item.page %} btn-primary {% else %} btn-transparent {% endif %} w-full level-{{ level }}"
-          >
-            {% if level == 0 %} <span class="icon"><i class="{{ item.icon }}"></i></span> {% endif %}
-            <span class="text grow {% if level == 0 %} font-bold {% endif %}">
-              {% if bookConfig.pages[item.page].title %} {{ bookConfig.pages[item.page].title }} {% else %} <span class="text-slate-400">{{ item.page }}</span> {% endif %}
-            </span>
-          </a>
-          <div
-            id="{{ itemIdPrefix }}_{{ itemCounter }}_{{ page }}"
-            class=""
-          >
-            <ul class="level-{{ level }}">
-              {{ _self.renderSidebar(item.children, bookConfig, env, breadcrumbs, itemIdPrefix ~ "_" ~ itemCounter, level + 1) }}
-            </ul>
-          </div>
-        {% else %}
-          <a
-            href="{{ env.guideRootUrl }}/{{ item.page }}"
-            class="{% if level == 0 %} btn {% else %} btn btn-small {% endif %} {% if breadcrumbs|last == item.page %} btn-primary {% else %} btn-transparent {% endif %} w-full level-{{ level }}"
-          >
-            {% if level == 0 %} <span class="icon"><i class="{{ item.icon }}"></i></span> {% endif %}
-            <span class="text {% if level == 0 %} font-bold {% endif %}">
-              {% if bookConfig.pages[item.page].title %} {{ bookConfig.pages[item.page].title }} {% else %} <span class="text-slate-400">{{ item.page }}</span> {% endif %}
-            </span>
-          </a>
-        {% endif %}
-      </li>
+  {% set itemCounter = 0 %}
+  {% for item in items %}
+    <li id="{{ itemIdPrefix }}_{{ itemCounter }}" class="level-{{ level }}">
+      {% if item.children is iterable %}
+        <a href="{{ env.guideRootUrl }}/{{ item.page ?? '' }}"
+          class="
+            {% if level == 0 %} btn {% else %} btn btn-small {% endif %}
+            {% if breadcrumbs|last == item.page %} btn-primary {% else %} btn-transparent {% endif %}
+            {% if item.page in breadcrumbs %} expanded {% else %} collapsed {% endif %}
+            has-children
+            w-full level-{{ level }}
+          "
+        >
+          {% if level == 0 %} <span class="icon"><i class="{{ item.icon }}"></i></span> {% endif %}
+          <span class="text grow {% if level == 0 %} font-bold {% endif %}">
+            {% if bookConfig.pages[item.page].title %} {{ bookConfig.pages[item.page].title }} {% else %} <span class="text-slate-400">{{ item.page }}</span> {% endif %}
+          </span>
+        </a>
+        <div
+          id="{{ itemIdPrefix }}_{{ itemCounter }}_{{ page }}"
+          class=""
+        >
+          <ul class="level-{{ level }}">
+            {{ _self.renderSidebar(item.children, bookConfig, env, breadcrumbs, itemIdPrefix ~ "_" ~ itemCounter, level + 1) }}
+          </ul>
+        </div>
+      {% else %}
+        <a
+          href="{{ env.guideRootUrl }}/{{ item.page }}"
+          class="
+            {% if level == 0 %} btn {% else %} btn btn-small {% endif %}
+            {% if breadcrumbs|last == item.page %} btn-primary {% else %} btn-transparent {% endif %}
+            {% if item.page in breadcrumbs %} expanded {% else %} collapsed {% endif %}
+            w-full level-{{ level }}
+          "
+        >
+          {% if level == 0 %} <span class="icon"><i class="{{ item.icon }}"></i></span> {% endif %}
+          <span class="text {% if level == 0 %} font-bold {% endif %}">
+            {% if bookConfig.pages[item.page].title %} {{ bookConfig.pages[item.page].title }} {% else %} <span class="text-slate-400">{{ item.page }}</span> {% endif %}
+          </span>
+        </a>
+      {% endif %}
+    </li>
 
-      {% set itemCounter = itemCounter + 1 %}
-    {% endfor %}
-  {% endif %}
+    {% set itemCounter = itemCounter + 1 %}
+  {% endfor %}
 {% endmacro %}
 
 {# https://preline.co/templates/admin/index.html #}
@@ -47,10 +56,9 @@
     <div class="px-6 pt-4 pb-4">
       <div>
         <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="{{ env.guideRootUrl }}">
-          DTXS<br/>
+          Ceremony CRM<br/>
         </a>
       </div>
-      <small class="text-primary">Digital Twin data eXchange Standard</small><br/>
       <small>Developer's guide</small>
     </div>
 
