--- a/template/pages/main.twig
+++ b/template/pages/main.twig
@@ -11,6 +11,7 @@
   <title>Help @ CeremonyCRM</title>
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
+  {{ elements.htmlHead|raw }}
 </head>
 <body>
   {{ elements.header|raw }}
