--- a/template/pages/not-found.twig
+++ b/template/pages/not-found.twig
@@ -8,9 +8,10 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel='shortcut icon' href='{{ rootUrl }}/images/icon.png'>
-  <title>Digital Twin data eXchange Standard | Developer's guide</title>
+  <title>Help @ CeremonyCRM</title>
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
+  {{ elements.htmlHead|raw }}
 </head>
 <body>
   {{ elements.header|raw }}
