--- a/template/pages/main.twig
+++ b/template/pages/main.twig
@@ -2,13 +2,22 @@
 
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel='shortcut icon' href='{{ templateRootUrl }}/assets/logo.svg'>
+  <title>Ceremony CRM | Developer's guide</title>
+  <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
+  <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
   {{ elements.htmlHead|raw }}
 </head>
 <body>
   {{ elements.header|raw }}
   {{ elements.sidebar|raw }}
   <!-- Content -->
-  <div class="p-8 flex-1 max-w-3xl mb-4 ml-72 mr-4 lg:mr-60 space-y-1">
+  <div class="content">
     {{ content|raw }}
   </div>
   {{ elements.onThisPage|raw }}
