--- a/template/pages/not-found.twig
+++ b/template/pages/not-found.twig
@@ -2,15 +2,24 @@
 
 <html class="template-basic">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel='shortcut icon' href='{{ templateRootUrl }}/assets/logo.svg'>
+  <title>Ceremony CRM | Developer's guide</title>
+  <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
+  <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
   {{ elements.htmlHead|raw }}
 </head>
 <body>
   {{ elements.header|raw }}
   {{ elements.sidebar|raw }}
   <!-- Content -->
-  <div class="p-8 flex-1 mb-4 ml-72 mr-4 lg:mr-60 space-y-1 text-center" style="max-width:1000px">
+  <div class="content text-center">
     <h1 class="pt-12">Ooops!</h1>
-    <div class="text-primary text-9xl py-12"><i class="fas fa-magnifying-glass"></i></div>
+    <div class="text-primary py-12"><i class="fas fa-magnifying-glass text-9xl"></i></div>
     <div>
       This page does not exist.<br/>
       <br/>
