--- a/template/elements/sidebar.twig
+++ b/template/elements/sidebar.twig
@@ -57,7 +57,7 @@
       <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="{{ env.guideRootUrl }}">
         <span class="logo-font" style="font-size:20pt">ceremony</span>
       </a>
-      <div class="logo-font text-xs text-primary pb-2 pt-1">Sales Orchester</div>
+      <div class="logo-font text-xs text-primary pb-2 pt-1">Trading is a game. Play it like a pro.</div>
       <div class="text-xs">Developer's guide</div>
     </div>
 
