--- a/template/elements/sidebar.twig
+++ b/template/elements/sidebar.twig
@@ -54,7 +54,7 @@
 
   <div class="relative flex flex-col h-full max-h-full pb-10">
     <div class="px-6 pt-4 pb-4">
-      <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="{{ env.guideRootUrl }}">
+      <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="{{ env.guideRootUrl }}/">
         <span class="logo-font" style="font-size:20pt">ceremony</span>
       </a>
       <div class="logo-font text-xs text-primary pb-2 pt-1">Trading is a game. Play it like a pro.</div>
