--- a/template/pages/without-sidebar.twig
+++ b/template/pages/without-sidebar.twig
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel='shortcut icon' href='{{ rootUrl }}/images/icon.png'>
-  <title>Help @ CeremonyCRM</title>
+  <title>Help @ Hubleto</title>
   <link rel="stylesheet" type="text/css" href="{{ rootUrl }}/css/dist.css">
 </head>
 <body>
