--- a/template/pages/not-found.twig
+++ b/template/pages/not-found.twig
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel='shortcut icon' href='{{ templateRootUrl }}/assets/logo.svg'>
-  <title>Ceremony CRM | Developer's guide</title>
+  <title>Hubleto | Developer's guide</title>
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
   {{ elements.htmlHead|raw }}
