--- a/template/elements/sidebar.twig
+++ b/template/elements/sidebar.twig
@@ -54,10 +54,7 @@
 
   <div class="relative flex flex-col h-full max-h-full pb-10">
     <div class="px-6 pt-4 pb-4">
-      <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="{{ env.guideRootUrl }}/">
-        <span class="logo-font" style="font-size:20pt">Hubleto</span>
-      </a>
-      <div class="logo-font text-xs text-primary pb-2 pt-1">Business Application Hub</div>
+      <img class="logo" src="{{ templateRootUrl }}/assets/logo-hubleto-s-textom.png"/><br/>
       <div class="text-xs">Developer's guide</div>
     </div>
 
