--- a/template/elements/sidebar.twig
+++ b/template/elements/sidebar.twig
@@ -53,10 +53,10 @@
 <div class="sidebar" role="dialog" tabindex="-1" aria-label="Sidebar">
 
   <div class="relative flex flex-col h-full max-h-full pb-10">
-    <div class="px-6 pt-4 pb-4">
+    <div class="px-6 pt-4 pb-4"><a href="{{ guideRootUrl }}">
       <img class="logo" src="{{ templateRootUrl }}/assets/logo-hubleto-s-textom.png"/><br/>
       <div class="text-xs">Developer's guide</div>
-    </div>
+    </a></div>
 
     {# <div class="hidden md:block">
       <!-- Search Input -->
