--- a/template/elements/footer.twig
+++ b/template/elements/footer.twig
@@ -1,3 +1,3 @@
 <div class="fixed bottom-0 z-[60] w-full bg-white p-2 text-xs text-gray-500 border-t border-gray-200">
-  (C) WAI, {{ data.today }}
+  <a href="https://www.hubleto.com">www.hubleto.com</a>
 </div>
