--- a/template/pages/main.twig
+++ b/template/pages/main.twig
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel='shortcut icon' href='{{ templateRootUrl }}/assets/logo-hubleto.png'>
-  <title>Hubleto | Developer's guide</title>
+  <title>Hubleto | Open source CRM and ERP | Developer's guide</title>
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
   <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/atom-one-dark.min.css">
