--- a/template/elements/header.twig
+++ b/template/elements/header.twig
@@ -1,10 +1,10 @@
 <!-- ========== HEADER ========== -->
 <header class="header flex flex-row justify-between">
   <div class="header-inner">
-    <a href="{{ guideRootUrl }}"><img class="logo" src="{{ templateRootUrl }}/assets/logo-hubleto.png"/></a>
+    {# <a href="{{ guideRootUrl }}"><img class="logo" src="{{ templateRootUrl }}/assets/logo-hubleto.png"/></a> #}
     {% for item in breadcrumbs %}
       <svg version="1.1" style="width:0.5em;height:0.5em" viewBox="0 0 460 531">
-        <polygon class="fill-primary" points="0.5,0.5 459.5,265 0.5,530.5 0.5,445 100,265.5 0.5,85.5"/>
+        <polygon class="fill-white" points="0.5,0.5 459.5,265 0.5,530.5 0.5,445 100,265.5 0.5,85.5"/>
       </svg>
       <a href="{{ guideRootUrl }}/{{ item }}">{{ bookConfig.pages[item].title }}</a>
     {% endfor %}
