--- a/template/elements/footer.twig
+++ b/template/elements/footer.twig
@@ -1,4 +1,4 @@
 <div class="fixed bottom-0 z-[60] w-full bg-white p-2 text-xs text-gray-500 border-t border-gray-200">
   <a href="https://www.hubleto.com" class="text-xs" target="_blank">www.hubleto.com</a> |
-  Found a bug? Report an <a href="https://github.com/wai-blue/hubleto/issues" class="text-xs" target="_blank">issue via GitHub</a>.
+  Found a bug or missing something? Report an <a href="https://github.com/wai-blue/hubleto/issues" class="text-xs" target="_blank">issue via GitHub</a>.
 </div>
