--- a/v0/template/pages/not-found.twig
+++ b/v0/template/pages/not-found.twig
@@ -2,20 +2,12 @@
 
 <html class="template-basic">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel='shortcut icon' href='{{ templateRootUrl }}/assets/images/logo-hubleto.png'>
-  <title>Hubleto | Developer's guide</title>
-  <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/book.css">
-  <link rel="stylesheet" type="text/css" href="{{ templateRootUrl }}/assets/css/fontawesome-6.6.css">
-  {{ elements.htmlHead|raw }}
+  {% include('elements/html-head.twig') %}
 </head>
 <body>
-  {{ elements.header|raw }}
-  {{ elements.sidebar|raw }}
+  {% include('elements/header.twig') %}
+  {% include('elements/sidebar.twig') %}
+
   <!-- Content -->
   <div class="content text-center">
     <h1 class="pt-12">Ooops!</h1>
@@ -26,7 +18,7 @@
       Go to <a href="{{ guideRootUrl }}/">homepage</a>.
     </div>
   </div>
-  {{ elements.footer|raw }}
+  {% include('elements/footer.twig') %}
 
   <script src="{{ guideRootUrl }}/node_modules/preline/dist/preline.js"></script>
 </body>
