--- a/v0/template/assets/css/book.css
+++ b/v0/template/assets/css/book.css
@@ -1688,24 +1688,26 @@
     }
   }
   .content img {
+    margin-inline: auto;
     margin-top: calc(var(--spacing) * 4);
     max-width: var(--container-xl);
+    border-radius: var(--radius-sm);
     border-style: var(--tw-border-style);
     border-width: 1px;
     border-color: var(--color-slate-200);
     background-color: var(--color-slate-100);
-    padding: calc(var(--spacing) * 2);
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .content img + p > em {
-    margin-bottom: calc(var(--spacing) * 4);
-    padding-top: calc(var(--spacing) * 0);
-    font-size: var(--text-xs);
-    line-height: var(--tw-leading, var(--text-xs--line-height));
-    color: var(--color-slate-400);
-    position: relative;
-    top: -0.75em;
+  .content img + h6 {
+    margin-inline: auto;
+    text-align: center;
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+    color: var(--color-gray-600);
+    font-style: italic;
   }
   .header {
     position: sticky;
